--- a/styles.css
+++ b/styles.css
@@ -13,395 +13,117 @@ body {
   color: #344563;
 }
 
-@media screen and (max-width: 768px) {
-  header {
-    display: flex;
-    justify-content: flex-end;
-    padding: 30px;
-  }
-
-  header span {
-    margin-right: auto;
-  }
-
-  header span a {
-    font-weight: 700;
-    font-size: 18px;
-    text-align: center;
-    line-height: 20px;
-    text-decoration: none;
-    color: #6070ff;
-    font-family: "Poppins", monospace;
-  }
-
-  .headline {
-    background-image: url("./images/header-shapes-mobile.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    padding-bottom: 100px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border-bottom-left-radius: 20px;
-  }
-
-  .main_content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 80px 40px 0 40px;
-    row-gap: 10px;
-  }
-
-  .username {
-    display: inline-flex;
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 52px;
-    width: 80%;
-    align-items: center;
-    text-align: left;
-    align-self: flex-start;
-    margin-bottom: auto;
-    color: #172b4d;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    font-family: "Poppins", monospace;
-  }
-
-  .introduction {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    color: #344563;
-    font-family: "Poppins", monospace;
-  }
-
-  .social_links {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    row-gap: 10px;
-  }
-
-  #lets_connect {
-    color: #7f8cff;
-    font-size: 16px;
-    align-self: flex-start;
-    margin-left: 40px;
-    font-family: "Poppins", monospace;
-  }
-
-  .social_links ul {
-    display: flex;
-    list-style: none;
-    justify-content: flex-start;
-    height: 20px;
-    width: 80%;
-    gap: 20px;
-    margin-left: 40px;
-  }
-
-  .links li a img {
-    max-height: 20px;
-  }
-
-  /* works section */
-  .works {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(327px, 1fr));
-    justify-content: center;
-    font-family: "Poppins", monospace;
-    background: #e5e5e5;
-    padding: 114px 24px;
-    gap: 88px;
-  }
-
-  /* works card */
-  .works .card {
-    background: #ffff;
-    border: 1px solid #dfe1e6;
-    border-radius: 16px;
-    padding: 16px;
-    gap: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  /* snapshoot */
-  .snapshoot_wapper {
-    width: 100%;
-  }
-
-  .snapshoot_wapper .snapshoot {
-    object-fit: contain;
-    width: 100%;
-  }
-
-  /* left_block */
-  .left_block {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    row-gap: 20px;
-  }
-
-  .left_block_title {
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-
-  .left_block_title .projec_title {
-    width: 295px;
-    font-family: "Poppins", monospace;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 44px;
-    color: #172b4d;
-    display: flex;
-    flex-wrap: wrap;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-  }
-
-  .left_block p {
-    color: #344563;
-  }
-
-  .left_block_title .role_and_time {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-  }
-
-  .left_block ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    gap: 8px;
-    margin: 0;
-  }
-
-  .left_block ul li {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 4px 12px;
-    background: #ebebff;
-    border-radius: 8px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    color: #6070ff;
-  }
-
-  button.action {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    padding: 12px;
-    width: 124px;
-    height: 48px;
-    border: 1px solid #6070ff;
-    border-radius: 8px;
-    color: #396df2;
-    background: #fff;
-    font-family: "Poppins", monospace;
-    font-style: normal;
-    font-size: 17px;
-    font-weight: 500;
-  }
-
-  .about_myself {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 114px 24px;
-    gap: 24px;
-    border-top-right-radius: 20px;
-  }
-
-  .top {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-  }
-
-  .about_myself .top h1 {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 52px;
-    display: flex;
-    align-items: center;
-    color: #172b4f;
-  }
-
-  .top .social_links {
-    margin-left: -40px;
-  }
-
-  .top button.action {
-    margin-top: 10px;
-    width: 162px;
-    height: 48px;
-  }
-
-  .skill_list {
-    margin-top: 20px;
-    width: 100%;
-  }
-
-  .skill_list ul li .separator {
-    width: 100%;
-  }
-
-  .about_myself .skill_list ul {
-    list-style: none;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 20px;
-  }
-
-  .skill_list ul li h4 {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-  }
-
-  .skill_list ul li .frame {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .skill_list ul li .language_wrapper .language {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding-left: 20px;
-    gap: 20px;
-    height: 66.72px;
-    background-color: #f7f7f9;
-    border-radius: 8px;
-  }
-
-  .contact_form {
-    background-image: url("images/contact-form.svg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-color: #6070ff;
-    padding: 114px 24px;
-    border-top-left-radius: 100px;
-  }
-
-  .contact_form .contact_wrapper > h1 {
-    color: #fff;
-    font-weight: 700;
-    font-family: "Poppins", monospace;
-    font-size: 40px;
-    line-height: 52px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-  }
-
-  .contact_form .contact_wrapper > p {
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
-    text-align: center;
-    color: #ebebff;
-  }
-  .contact_form .contact_wrapper {
-    margin: 80px 0 0 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
-
-  .contact_wrapper form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-  }
-  .contact_wrapper form ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    row-gap: 10px;
-  }
-
-  .contact_wrapper ul li {
-    width: 100%;
-  }
-
-  .contact_wrapper input,
-  .contact_wrapper textarea {
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-    color: #172b4d;
-    border-radius: 8px;
-    display: inline-block;
-    border: 1px solid #cfd8dc;
-    padding: 15px 38px 15px 16px;
-    width: 100%;
-  }
-  .contact_form textarea {
-    min-height: 170px;
-    overflow: hidden;
-  }
-
-  .contact_wrapper form input[type="submit"] {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    width: 140px;
-    height: 48px;
-    background: #ffffff;
-    border-radius: 8px;
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #6070ff;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-  }
+header {
+  display: flex;
+  justify-content: flex-end;
+  padding: 30px;
 }
 
+header span {
+  margin-right: auto;
+}
+
+header span a {
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  line-height: 20px;
+  text-decoration: none;
+  color: #6070ff;
+  font-family: "Poppins", monospace;
+}
+
+.headline {
+  background-image: url("./images/header-shapes-mobile.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-bottom-left-radius: 20px;
+}
+
+.main_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 80px 40px 0 40px;
+  row-gap: 10px;
+}
+
+.username {
+  display: inline-flex;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 52px;
+  width: 80%;
+  align-items: center;
+  text-align: left;
+  align-self: flex-start;
+  margin-bottom: auto;
+  color: #172b4d;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  font-family: "Poppins", monospace;
+}
+
+.introduction {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  color: #344563;
+  font-family: "Poppins", monospace;
+}
+
+.social_links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 10px;
+}
+
+#lets_connect {
+  color: #7f8cff;
+  font-size: 16px;
+  align-self: flex-start;
+  margin-left: 40px;
+  font-family: "Poppins", monospace;
+}
+
+.social_links ul {
+  display: flex;
+  list-style: none;
+  justify-content: flex-start;
+  height: 20px;
+  width: 80%;
+  gap: 20px;
+  margin-left: 40px;
+}
+
+.links li a img {
+  max-height: 20px;
+}
+
+/* works section */
+.works {
+  display: grid;
+  grid-template-columns: 1fr;
+  /* repeat(auto-fit, minmax(327px, 1fr)); */
+  justify-content: center;
+  font-family: "Poppins", monospace;
+  background: #e5e5e5;
+  padding: 114px 24px;
+  gap: 88px;
+}
+
+/* works card */
 .works .card {
   background: #ffff;
   border: 1px solid #dfe1e6;
@@ -409,8 +131,275 @@ body {
   padding: 16px;
   gap: 12px;
   display: flex;
-  justify-content: center;
-  column-gap: 10px;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* snapshoot */
+.snapshoot_wapper {
+  width: 100%;
+}
+
+.snapshoot_wapper .snapshoot {
+  object-fit: contain;
+  width: 100%;
+}
+
+/* left_block */
+.left_block {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 20px;
+}
+
+.left_block_title {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.left_block_title .projec_title {
+  width: 295px;
+  font-family: "Poppins", monospace;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  display: flex;
+  flex-wrap: wrap;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.left_block p {
+  color: #344563;
+}
+
+.left_block_title .role_and_time {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.left_block ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  gap: 8px;
+  margin: 0;
+}
+
+.left_block ul li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 4px 12px;
+  background: #ebebff;
+  border-radius: 8px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+}
+
+button.action {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  width: 124px;
+  height: 48px;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  color: #396df2;
+  background: #fff;
+  font-family: "Poppins", monospace;
+  font-style: normal;
+  font-size: 17px;
+  font-weight: 500;
+}
+
+.about_myself {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 114px 24px;
+  gap: 24px;
+  border-top-right-radius: 20px;
+}
+
+.top {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.about_myself .top h1 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  color: #172b4f;
+}
+
+.top .social_links {
+  margin-left: -40px;
+}
+
+.top button.action {
+  margin-top: 10px;
+  width: 162px;
+  height: 48px;
+}
+
+.skill_list {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.skill_list ul li .separator {
+  width: 100%;
+}
+
+.about_myself .skill_list ul {
+  list-style: none;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 20px;
+}
+
+.skill_list ul li h4 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.skill_list ul li .frame {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill_list ul li .language_wrapper .language {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 20px;
+  gap: 20px;
+  height: 66.72px;
+  background-color: #f7f7f9;
+  border-radius: 8px;
+}
+
+.contact_form {
+  background-image: url("images/contact-form.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #6070ff;
+  padding: 114px 24px;
+  border-top-left-radius: 100px;
+}
+
+.contact_form .contact_wrapper > h1 {
+  color: #fff;
+  font-weight: 700;
+  font-family: "Poppins", monospace;
+  font-size: 40px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.contact_form .contact_wrapper > p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #ebebff;
+}
+.contact_form .contact_wrapper {
+  margin: 80px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.contact_wrapper form {
+  width: auto;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+.contact_wrapper form ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 10px;
+}
+
+.contact_wrapper ul li {
+  width: 100%;
+}
+
+.contact_wrapper input,
+.contact_wrapper textarea {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  color: #172b4d;
+  border-radius: 8px;
+  display: inline-block;
+  border: 1px solid #cfd8dc;
+  padding: 15px 38px 15px 16px;
+  width: 100%;
+}
+.contact_form textarea {
+  min-height: 170px;
+  overflow: hidden;
+}
+
+.contact_wrapper form input[type="submit"] {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 12px 16px;
+  width: 140px;
+  height: 48px;
+  background: #FFFFFF;
+  border-radius: 8px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
 button {
@@ -424,7 +413,6 @@ button {
   text-align: center;
   border-radius: 8px;
 }
-
 button:hover {
   background-color: #6070ff;
   color: #fff;
@@ -436,13 +424,26 @@ button:active {
   border: 1px solid #7f8cff;
   color: #6070ff;
 }
-
 button:disabled {
   color: #5e6c84;
   border: 1px solid #c1c7d0;
 }
-
 button:focus {
   background: #2230d2;
   color: #fff;
+}
+
+
+@media screen and (min-width: 768px) {
+  .works .card {
+    background: #fff;
+    border: 1px solid #dfe1e6;
+    border-radius: 16px;
+    padding: 16px;
+    gap: 12px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 10px;
+  }
 }
