Fix background color

--- a/styles.css
+++ b/styles.css
@@ -385,7 +385,7 @@ button.action {
   padding: 12px 16px;
   width: 140px;
   height: 48px;
-  background: #FFFFFF;
+  background: #fff;
   border-radius: 8px;
   font-family: "Poppins";
   font-style: normal;
