--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,6 @@ header span a {
 .works {
   display: grid;
   grid-template-columns: 1fr;
-  /* repeat(auto-fit, minmax(327px, 1fr)); */
   justify-content: center;
   font-family: "Poppins", monospace;
   background: #e5e5e5;
@@ -269,6 +268,14 @@ button.action {
   width: 100%;
 }
 
+.contact_wrapper form ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 10px;
+}
+
 .about_myself .skill_list ul {
   list-style: none;
   width: 100%;
@@ -322,7 +329,7 @@ button.action {
 }
 
 .contact_form .contact_wrapper > p {
-  font-family: "Poppins";
+  font-family: "Poppins", monospace;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -330,6 +337,7 @@ button.action {
   text-align: center;
   color: #ebebff;
 }
+
 .contact_form .contact_wrapper {
   margin: 80px 0 0 0;
   display: flex;
@@ -345,13 +353,6 @@ button.action {
   align-items: flex-start;
   gap: 10px;
 }
-.contact_wrapper form ul {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  row-gap: 10px;
-}
 
 .contact_wrapper ul li {
   width: 100%;
@@ -359,7 +360,7 @@ button.action {
 
 .contact_wrapper input,
 .contact_wrapper textarea {
-  font-family: "Poppins";
+  font-family: "Poppins", monospace;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -368,11 +369,11 @@ button.action {
   align-items: center;
   color: #172b4d;
   border-radius: 8px;
-  display: inline-block;
   border: 1px solid #cfd8dc;
   padding: 15px 38px 15px 16px;
   width: 100%;
 }
+
 .contact_form textarea {
   min-height: 170px;
   overflow: hidden;
@@ -387,13 +388,11 @@ button.action {
   height: 48px;
   background: #fff;
   border-radius: 8px;
-  font-family: "Poppins";
+  font-family: "Poppins", monospace;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
-  display: flex;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.03em;
   color: #6070ff;
@@ -436,17 +435,16 @@ button:focus {
   color: #fff;
 }
 
-
 @media screen and (min-width: 768px) {
   .works .card {
     background: #fff;
-    border: 1px solid #dfe1e6;
+    border: 2px solid #dfe1e6;
     border-radius: 16px;
     padding: 16px;
     gap: 12px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    column-gap: 10px;
+    column-gap: 20px;
   }
 }
