--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,6 @@ header span a {
   background-image: url("./images/header-shapes-mobile.png");
   background-repeat: no-repeat;
   background-size: contain;
-  background-position-x: 100%;
-
-  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -390,6 +387,7 @@ button.action {
   line-height: 28px;
   text-align: center;
   color: #ebebff;
+  width: 327px;
 }
 
 .contact_wrapper form {
@@ -564,6 +562,8 @@ button:focus {
 
   .headline {
     background-image: url("./images/headerbg.png");
+    background-size: 99%;
+    background-position: left 20px top 80px;
   }
 
   .username {
@@ -604,15 +604,14 @@ button:focus {
   .contact_form .contact_wrapper {
     background-image: url("./images/contact-formdp.png");
     background-size: contain;
+    background-size: 90%;
+    background-position: top 75px right 74px;
   }
 
-  .contact_form .contact_wrapper > p {
+  .contact_form .contact_wrapper .form_wrapper > p {
     font-size: 20px;
-    line-height: 18px;
-  }
-
-  .contact_form .contact_wrapper .form_wrapper {
-    padding: 142px 320px 127px;
+    line-height: 28px;
+    width: 569px;
   }
 
   .form_wrapper form {
