--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@ header span a {
 .headline {
   background-image: url("./images/header-shapes-mobile.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100%;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -146,16 +147,18 @@ header span a {
 .snapshoot_wapper .snapshoot {
   object-fit: contain;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .snapshoot_wapper .desktop,
+.left_block .desktop,
 .left_block .left_block_title .desktop,
 .left_block .tags .desktop {
   display: none;
 }
 
 .snapshoot_wapper .mobile,
+.left_block .mobile,
 .left_block .left_block_title .mobile {
   display: initial;
 }
@@ -483,7 +486,7 @@ button:focus {
   }
 
   .works .card {
-    padding: 24;
+    padding: 24px;
     border: 2px solid #dfe1e6;
     border-radius: 24px;
     flex-direction: row;
@@ -496,15 +499,19 @@ button:focus {
 
   .snapshoot_wapper,
   .left_block {
-    width: 50%;
+    width: auto;
+    height: 100%;
+    flex: 1;
   }
 
   .snapshoot_wapper .mobile,
+  .left_block .mobile,
   .left_block .left_block_title .mobile {
     display: none;
   }
 
   .snapshoot_wapper .desktop,
+  .left_block .desktop,
   .left_block .left_block_title .desktop,
   .left_block .tags .desktop {
     display: initial;
@@ -558,6 +565,13 @@ button:focus {
     align-items: center;
     text-align: center;
     color: #344563;
+    transition: all 0.1s ease-in 0.1s;
+  }
+
+  header nav ul li a:hover {
+    font-weight: 700;
+    font-size: 1rem;
+    color: blueviolet;
   }
 
   .headline {
@@ -570,6 +584,19 @@ button:focus {
     font-size: 48px;
     line-height: 60px;
     color: #091e42;
+    animation: slidein;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+  }
+
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+    }
+
+    to {
+      margin-left: initial;
+    }
   }
 
   .headline .introduction {
