--- a/styles.css
+++ b/styles.css
@@ -262,14 +262,14 @@ button.action {
   gap: 10px;
 }
 
-.about_myself .top h1 {
+.about_myself .top h2 {
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
   display: flex;
   align-items: center;
-  color: #172b4f;
+  color: #fff;
 }
 
 .about_myself .top p {
@@ -302,7 +302,7 @@ button.action {
   gap: 20px;
 }
 
-.skill_list ul li h4 {
+.skill_list ul li h3 {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
