Change the color of the heading for about seciton

--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,7 @@ button.action {
   line-height: 52px;
   display: flex;
   align-items: center;
-  color: #fff;
+  color: #172b4f;
 }
 
 .about_myself .top p {
