--- a/css/modal.css
+++ b/css/modal.css
@@ -3,13 +3,13 @@
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
-  overflow-y: auto;
   width: 90%;
-  height: 100vh;
+  height: calc(100vh - 10%);
   position: fixed;
   top: 0;
   left: 5%;
-  margin: 10% 1% 10% 0;
+  bottom: 0;
+  margin: 10% auto 10%;
   background-color: #fff;
   border-radius: 16px;
   padding: 16px;
@@ -32,6 +32,24 @@
   flex-direction: column;
   gap: 20px;
   margin-top: 30px;
+}
+
+.project-image-container {
+  border-radius: 8px;
+  width: 100%;
+  height: 220px;
+  background-position: center;
+  background-size: 90%;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+.dsktp {
+  display: none;
+}
+
+.mbl {
+  display: block;
 }
 
 .description_wrapper p.description {
@@ -124,7 +142,20 @@
     height: calc(100vh - 40px);
     left: 10%;
     padding: 1rem 1em 4em 1rem;
-    margin: 2% 5% 2% 0;
+    margin: 2% auto 0;
+  }
+
+  .project-image-container {
+    width: 100%;
+    height: 300px;
+  }
+
+  .dsktp {
+    display: block;
+  }
+
+  .mbl {
+    display: none;
   }
 
   .modal .description_wrapper {
